# my-new-trae

./: AGENT_ZERO_INTEGRATION_COMPLETE.md  AGENT_ZERO_TOOLS_INTEGRATION.md  INTEGRATION_SUMMARY.md  LIVE_AUDIO_INTEGRATION_GUIDE.md  PROGRAMMATIC_INTERACTION_GUIDE.md  PROGRAMMATIC_SCREEN_VISUALIZER_GUIDE.md  README.md  SCREEN_VIEW_INTEGRATION_SUMMARY.md  TRAE-AGENT-LOG.md  activate-agent.sh  complextool.py  comprehensive_fix.py  demo_all_agent_zero_tools.py  example_agent_zero_tools.py  example_integrated_tools_demo.py  example_progress_and_response_tools.py  filetool.py  final_integration_test.py  fix_agent_zero_tools.py  forensictool.py  fukg1thub1010-hrm-8a5edab282632443.txt  ghidra_mcp_server.py  importtool.py  longerrortool.py  mega_mcp_generator.sh  multifixtool.py  pyproject.toml  reporttool.py  run_tests.sh  sentinel.py  sentinel_enhanced.py  sentinel_platform.py  session1.txt  setup.sh  setup_ghidra_environment.sh  setup_ide_foundry.sh  setup_mcp_keys.sh  specialtool.py  start_agent.sh  syntaxtool.py  (+10 more)
.github/workflows/: ci.yml
Ghidra/ghidra-patchdiff-correlator-master/PatchDiffCorrelator/src/main/java/patchdiffcorrelator/: BulkBasicBlockMnemonicProgramCorrelatorFactory.java  InstructionFunctionBulker.java
Ghidra/owailyykgn.github/: README.md  background.js  manifest.json
Ghidra/owailyykgn.github/content/: index.css  index.iife.js
Ghidra/pcode-emulator-master/: instr.py
Ghidra/rz-ghidra-dev/: CMakeLists.txt
Ghidra/rz-ghidra-dev/scripts/: Dockerfile.arch  Dockerfile.buster
Ghidra/rz-ghidra-dev/test/db/extras/: ghidra
trae_agent/: cli.py  trajectory.py
trae_agent/blueprints/python_engineer/: tool_manifest.json
trae_agent/hrm/: README.md
trae_agent/memory/: 03a1702f-2278-4972-bb38-02477c3d8138.json
trae_agent/providers/: __init__.py  base.py  pollinations.py  pollinations_stream.py  stream_utils.py  streaming_notes.txt
trae_agent/registry/: active_agents.json
trae_agent/tests/: test_agent_run_basic.py  test_cli.py  test_cli_llm.py  test_pollinations_provider.py  test_trajectory.py
trae_agent/tools/: __init__.py  base.py  bash_tool.py  file_edit_tool.py  json_edit_tool.py  sequential_thinking_tool.py  task_done_tool.py  tools_registry.py
trae_agent/tools/agent_zero_tools/: code_execution_tool.py  input_tool.py  search_engine_tool.py
trae_agent/trajectories/: trajectory_20250808_214754.json
