[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trae-agent"
version = "1.0.0"
description = "Advanced AI agent system with IDE Foundry integration"
authors = [
    {name = "Trae Agent Team", email = "team@traeagent.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "httpx>=0.25.0",
    "psutil>=5.9.0",
    "redis>=4.5.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "protobuf>=6.31.1",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.28.0",
    "duckduckgo-search>=3.8.0",
    "llama-index>=0.9.0",
    "prometheus-client>=0.17.0",
    "jsonpath-ng>=1.7.0",
    "tree-sitter>=0.23.2",
    "tree-sitter-languages>=1.10.2",
    "pyaudio>=0.2.14",
    "webrtcvad>=2.0.10",
    "pytesseract>=0.3.13",
    "mss>=10.0.0",
    "adam-atan2>=0.0.3",
    "einops>=0.8.1",
    "coolname>=2.2.0",
    "argdantic>=1.3.3",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.12.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trae_agent*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
trae = "trae_agent.cli:cli"
trae-cli = "trae_agent.cli:cli"

[project.entry-points."eta.tools"]
code_execution = "trae_agent.tools.agent_zero_tools.code_execution_tool:CodeExecutionTool"
input = "trae_agent.tools.agent_zero_tools.input_tool:InputTool"
search_engine = "trae_agent.tools.agent_zero_tools.search_engine_tool:SearchEngineTool"
